test_regress/t/t_var_suggest_bad.out
%Error: t/t_var_suggest_bad.v:13:11: Can't find definition of variable: 'foobat'
                                   : ... Suggested alternative: 'foobar'
      if (foobat) $stop;
          ^~~~~~
%Error: t/t_var_suggest_bad.v:14:7: Can't find definition of task/function: 'boobat'
                                  : ... Suggested alternative: 'boobar'
      boobat;
      ^~~~~~
%Error: Exiting due to
